Implemented controller and views for actors.

--- a/Laboration 1/MyMovies/Views/Movies/Index.cshtml
+++ b/Laboration 1/MyMovies/Views/Movies/Index.cshtml
@@ -11,8 +11,8 @@
 
 <table class="table">
     <tr>
-        <th>@Html.DisplayNameFor(movieTitle => movieTitle.Title)</th>
-        <th>@Html.DisplayNameFor(movieTitle => movieTitle.Rating)</th>
+        <th>@Html.DisplayNameFor(movie => movie.Title)</th>
+        <th>@Html.DisplayNameFor(movie => movie.Rating)</th>
         <th />
     </tr>
 @foreach (Movie movie in Model)
