--- a/Laboration 1/MyMovies/Views/Shared/_Layout.cshtml
+++ b/Laboration 1/MyMovies/Views/Shared/_Layout.cshtml
@@ -18,6 +18,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 @Html.ActionLink("Movies", "Index", "Movies", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Actors", "Index", "Actors", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
