Implemented adding a actor.

--- a/Laboration 1/MyMovies/Views/Actors/Create.cshtml
+++ b/Laboration 1/MyMovies/Views/Actors/Create.cshtml
@@ -2,10 +2,10 @@
 @model Actor
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Create";
 }
 
-<h2>Edit Actor</h2>
+<h2>Create Actor</h2>
 
 @using (Html.BeginForm())
 {
