Added a new 'Back to List' link on the web pages.

--- a/Laboration 1/MyMovies/Views/Movies/Details.cshtml
+++ b/Laboration 1/MyMovies/Views/Movies/Details.cshtml
@@ -13,3 +13,6 @@
     <li>@Html.DisplayNameFor(movie => movie.Actors): @Model.Actors</li>
 </ul>
 
+<p>
+    @Html.ActionLink("Back to List", "Index")
+</p>
