--- a/Laboration 1/MyMovies/Views/Movies/Edit.cshtml
+++ b/Laboration 1/MyMovies/Views/Movies/Edit.cshtml
@@ -1,5 +1,5 @@
-﻿@using MyMovies.Dal
-@model Movie
+﻿@using MyMovies.ViewModels
+@model EditMovieViewModel
 
 @{
     ViewBag.Title = "Edit";
@@ -17,6 +17,14 @@
                 @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
             </div>
         </div>
+        
+        <div class="form-group">
+            @Html.LabelFor(model => model.Genre, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownListFor(model => model.SelectedGenreId, Model.Genre, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Genre, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.Year, new { @class = "control-label col-md-2" })
@@ -31,6 +39,14 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Rating, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Rating, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        
+        <div class="form-group">
+            @Html.LabelFor(model => model.Cast, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Cast, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Cast, "", new { @class = "text-danger" })
             </div>
         </div>
         
