--- a/Laboration 1/MyMovies/Views/Movies/Index.cshtml
+++ b/Laboration 1/MyMovies/Views/Movies/Index.cshtml
@@ -9,10 +9,18 @@
 
 <p>@Html.ActionLink("Create New", "Create")</p>
 
+@using (Html.BeginForm())
+{
+    <p>
+        Search: @Html.TextBox("Filter")
+        <input type="submit" value="Search" />
+    </p>
+}
+
 <table class="table">
     <tr>
-        <th>@Html.ActionLink("Title", "Index", new { sortOrder = ViewBag.TitleSortDirection })</th>
-        <th>@Html.ActionLink("Rating", "Index", new { sortOrder = ViewBag.RatingSortDirection })</th>
+        <th>@Html.ActionLink("Title", "Index", new { sortOrder = ViewBag.TitleSortDirection, currentFilter = ViewBag.CurrentFilter })</th>
+        <th>@Html.ActionLink("Rating", "Index", new { sortOrder = ViewBag.RatingSortDirection, currentFilter = ViewBag.CurrentFilter })</th>
         <th />
     </tr>
 @foreach (Movie movie in Model)
