--- a/Laboration 1/MyMovies/Views/Movies/Create.cshtml
+++ b/Laboration 1/MyMovies/Views/Movies/Create.cshtml
@@ -22,7 +22,7 @@
             @Html.LabelFor(model => model.Genre, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownListFor(model => model.SelectedGenreId, Model.Genre, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Genre, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.SelectedGenreId, "", new { @class = "text-danger" })
             </div>
         </div>
 
