--- a/Laboration 1/MyMovies/Views/Movies/Index.cshtml
+++ b/Laboration 1/MyMovies/Views/Movies/Index.cshtml
@@ -12,15 +12,23 @@
 @using (Html.BeginForm())
 {
     <p>
-        Search: @Html.TextBox("Filter")
+        Search: @Html.TextBox("SearchText")
         <input type="submit" value="Search" />
+    </p>
+}
+
+@using (Html.BeginForm())
+{
+    <p>
+        Filter: @Html.DropDownList("GenreFilter", ViewBag.Genre as IEnumerable<SelectListItem>)
+        <input type="submit" value="Filter" />
     </p>
 }
 
 <table class="table">
     <tr>
-        <th>@Html.ActionLink("Title", "Index", new { sortOrder = ViewBag.TitleSortDirection, currentFilter = ViewBag.CurrentFilter })</th>
-        <th>@Html.ActionLink("Rating", "Index", new { sortOrder = ViewBag.RatingSortDirection, currentFilter = ViewBag.CurrentFilter })</th>
+        <th>@Html.ActionLink("Title", "Index", new { sortOrder = ViewBag.TitleSortDirection, currentSearchText = ViewBag.CurrentSearchText, currentGenreFilter = ViewBag.CurrentGenreFilter })</th>
+        <th>@Html.ActionLink("Rating", "Index", new { sortOrder = ViewBag.RatingSortDirection, currentSearchText = ViewBag.CurrentSearchText, currentGenreFilter = ViewBag.CurrentGenreFilter })</th>
         <th />
     </tr>
 @foreach (Movie movie in Model)
