--- a/Laboration 2/Uppgift 2/MyMovies/Views/Movies/Index.cshtml
+++ b/Laboration 2/Uppgift 2/MyMovies/Views/Movies/Index.cshtml
@@ -21,6 +21,7 @@
     <tr>
         <th>@Html.ActionLink("Title", "Index", new { sortOrder = ViewBag.TitleSortDirection, currentSearchText = ViewBag.CurrentSearchText, currentGenreFilter = ViewBag.CurrentGenreFilter })</th>
         <th>@Html.ActionLink("Rating", "Index", new { sortOrder = ViewBag.RatingSortDirection, currentSearchText = ViewBag.CurrentSearchText, currentGenreFilter = ViewBag.CurrentGenreFilter })</th>
+        <th>Genre</th>
         <th />
     </tr>
 @foreach (Movie movie in Model)
@@ -28,6 +29,7 @@
     <tr>
         <td>@movie.Title</td>
         <td>@movie.Rating</td>
+        <td>@movie.Genre.Name</td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id = movie.Id }) |
             @Html.ActionLink("Details", "Details", new { id = movie.Id }) |
