--- a/Laboration 2/Uppgift 2/MyMovies/Views/Movies/Index.cshtml
+++ b/Laboration 2/Uppgift 2/MyMovies/Views/Movies/Index.cshtml
@@ -12,15 +12,15 @@
 @using (Html.BeginForm())
 {
     <p>
-        Search: @Html.TextBox("SearchText") @Html.DropDownList("GenreFilter", ViewBag.Genre as IEnumerable<SelectListItem>)
-        <input type="submit" value="Search" />
+        @Html.DropDownList("GenreFilter", ViewBag.Genre as IEnumerable<SelectListItem>)
+        <input type="submit" value="Filter" />
     </p>
 }
 
 <table class="table">
     <tr>
-        <th>@Html.ActionLink("Title", "Index", new { sortOrder = ViewBag.TitleSortDirection, currentSearchText = ViewBag.CurrentSearchText, currentGenreFilter = ViewBag.CurrentGenreFilter })</th>
-        <th>@Html.ActionLink("Rating", "Index", new { sortOrder = ViewBag.RatingSortDirection, currentSearchText = ViewBag.CurrentSearchText, currentGenreFilter = ViewBag.CurrentGenreFilter })</th>
+        <th>Title</th>
+        <th>Rating</th>
         <th>Genre</th>
         <th />
     </tr>
