Removed hard coded texts in view and replaced them with HTML helper methods.

--- a/Laboration 2/Uppgift 1/MyMovies/Views/Movies/Index.cshtml
+++ b/Laboration 2/Uppgift 1/MyMovies/Views/Movies/Index.cshtml
@@ -19,8 +19,8 @@
 
 <table class="table">
     <tr>
-        <th>Title</th>
-        <th>Rating</th>
+        <th>@Html.DisplayNameFor(model => model.Title)</th>
+        <th>@Html.DisplayNameFor(model => model.Rating)</th>
         <th />
     </tr>
 @foreach (Movie movie in Model)
