Updated application to have more view models.

--- a/Laboration 2/Uppgift 3/MyMovies/Views/Movies/Index.cshtml
+++ b/Laboration 2/Uppgift 3/MyMovies/Views/Movies/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@using MyMovies.Models
-@model IEnumerable<Movie>
+﻿@using MyMovies.ViewModels
+@model IEnumerable<IndexMovieViewModel>
 
 @{
     ViewBag.Title = "Movies";
@@ -21,13 +21,15 @@
     <tr>
         <th>@Html.DisplayNameFor(model => model.Title)</th>
         <th>@Html.DisplayNameFor(model => model.Rating)</th>
+        <th>@Html.DisplayNameFor(model => model.Genre)</th>
         <th />
     </tr>
-@foreach (Movie movie in Model)
+@foreach (IndexMovieViewModel movie in Model)
 {
     <tr>
         <td>@movie.Title</td>
         <td>@movie.Rating</td>
+        <td>@movie.Genre</td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id = movie.Id }) |
             @Html.ActionLink("Details", "Details", new { id = movie.Id }) |
