Implemented stored procedure that adds a person and its address, and is using it from controller.

--- a/Laboration 2/Uppgift 4/PersonRegistry/Views/Home/Create.cshtml
+++ b/Laboration 2/Uppgift 4/PersonRegistry/Views/Home/Create.cshtml
@@ -9,12 +9,13 @@
 
 @using (Html.BeginForm())
 {
+    @Html.ValidationSummary(false)
+    
     <div class="form-horizontal">
         <div class="form-group">
             @Html.LabelFor(model => model.FirstName, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger" })
             </div>
         </div>
         
@@ -22,7 +23,6 @@
             @Html.LabelFor(model => model.Surname, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Surname, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Surname, "", new { @class = "text-danger" })
             </div>
         </div>
         
@@ -30,7 +30,6 @@
             @Html.LabelFor(model => model.Street, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Street, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Street, "", new { @class = "text-danger" })
             </div>
         </div>
         
@@ -38,7 +37,6 @@
             @Html.LabelFor(model => model.City, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.City, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.City, "", new { @class = "text-danger" })
             </div>
         </div>
         
