Implemented committing a transaction over two databases.

--- a/Laboration 2/Uppgift 4/PersonRegistry/Views/Shared/_Layout.cshtml
+++ b/Laboration 2/Uppgift 4/PersonRegistry/Views/Shared/_Layout.cshtml
@@ -18,6 +18,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 @Html.ActionLink("SQL Transaction", "Index", "SqlTransaction", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Entity Framework Transaction", "Index", "EntityFrameworkTransaction", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
