--- a/Laboration 2/Uppgift 4/PersonRegistry/Views/EntityFrameworkTransaction/Create.cshtml
+++ b/Laboration 2/Uppgift 4/PersonRegistry/Views/EntityFrameworkTransaction/Create.cshtml
@@ -1,8 +1,8 @@
 ﻿@using PersonRegistry.ViewModels
-@model PersonViewModel
+@model PetViewModel
 
 @{
-    ViewBag.Title = "Create Person";
+    ViewBag.Title = "Create Pet";
 }
 
 <h2>Create</h2>
@@ -10,36 +10,29 @@
 @using (Html.BeginForm())
 {
     @Html.ValidationSummary(false)
-    
+
     <div class="form-horizontal">
         <div class="form-group">
-            @Html.LabelFor(model => model.FirstName, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Name, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
             </div>
         </div>
-        
-        <div class="form-group">
-            @Html.LabelFor(model => model.Surname, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Surname, new { htmlAttributes = new { @class = "form-control" } })
-            </div>
-        </div>
-        
+
         <div class="form-group">
             @Html.LabelFor(model => model.Street, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Street, new { htmlAttributes = new { @class = "form-control" } })
             </div>
         </div>
-        
+
         <div class="form-group">
             @Html.LabelFor(model => model.City, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.City, new { htmlAttributes = new { @class = "form-control" } })
             </div>
         </div>
-        
+
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Save" class="btn btn-default" />
