--- a/Laboration 3/Advertisements/Views/Advertisements/Create.cshtml
+++ b/Laboration 3/Advertisements/Views/Advertisements/Create.cshtml
@@ -34,3 +34,58 @@
         </div>
     </div>
 }
+
+@using (Html.BeginForm("AddSubscriberAdvertisement", "Advertisements", FormMethod.Post, new { @class = "form-horizontal", id = "subscriberinput" }))
+{
+    <div class="form-group">
+        @Html.LabelFor(model => model.FirstName, new { @class = "col-sm-2 control-label" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Surname, new { @class = "col-sm-2 control-label" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Surname, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.PhoneNumber, new { @class = "col-sm-2 control-label" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Street, new { @class = "col-sm-2 control-label" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Street, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.PostalCode, new { @class = "col-sm-2 control-label" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.PostalCode, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.City, new { @class = "col-sm-2 control-label" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.City, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Save" class="btn btn-default" />
+        </div>
+    </div>
+}
+
+@using (Html.BeginForm("AddCompanyAdvertisement", "Advertisements", FormMethod.Post, new { @class = "form-horizontal", id = "companyinput" }))
+{
+    <div class="form-group">
+        @Html.LabelFor(model => model.Name, new { @class = "col-sm-2 control-label"})
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" }})
+        </div>
+    </div>
+}
