--- a/Laboration 3/Advertisements/Views/Advertisements/Create.cshtml
+++ b/Laboration 3/Advertisements/Views/Advertisements/Create.cshtml
@@ -88,4 +88,58 @@
             @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" }})
         </div>
     </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.OrganisationNumber, new { @class = "col-sm-2 control-label" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.OrganisationNumber, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.PhoneNumber, new { @class = "col-sm-2 control-label" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Street, new { @class = "col-sm-2 control-label" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Street, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.PostalCode, new { @class = "col-sm-2 control-label" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.PostalCode, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.City, new { @class = "col-sm-2 control-label" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.City, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.InvoiceStreet, new { @class = "col-sm-2 control-label" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.InvoiceStreet, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.InvoicePostalCode, new { @class = "col-sm-2 control-label" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.InvoicePostalCode, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.InvoiceCity, new { @class = "col-sm-2 control-label" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.InvoiceCity, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Save" class="btn btn-default" />
+        </div>
+    </div>
 }
