--- a/Laboration 3/Advertisements/Views/Advertisements/Create.cshtml
+++ b/Laboration 3/Advertisements/Views/Advertisements/Create.cshtml
@@ -74,6 +74,24 @@
         </div>
     </div>
     <div class="form-group">
+        @Html.LabelFor(model => model.AdvertisementTitle, new { @class = "col-sm-2 control-label" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.AdvertisementTitle, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.AdvertisementContent, new { @class = "col-sm-2 control-label" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.AdvertisementContent, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.AdvertisementPrice, new { @class = "col-sm-2 control-label" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.AdvertisementPrice, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+    </div>
+    <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" value="Save" class="btn btn-default" />
         </div>
@@ -135,6 +153,24 @@
         @Html.LabelFor(model => model.InvoiceCity, new { @class = "col-sm-2 control-label" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.InvoiceCity, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.AdvertisementTitle, new { @class = "col-sm-2 control-label" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.AdvertisementTitle, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.AdvertisementContent, new { @class = "col-sm-2 control-label" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.AdvertisementContent, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.AdvertisementPrice, new { @class = "col-sm-2 control-label" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.AdvertisementPrice, new { htmlAttributes = new { @class = "form-control" } })
         </div>
     </div>
     <div class="form-group">
