Implemented adding a company as reseller, and in the list of ads, whether or not it is a company that is the reseller is highlighted.

--- a/Laboration 3/Advertisements/Views/Advertisements/Index.cshtml
+++ b/Laboration 3/Advertisements/Views/Advertisements/Index.cshtml
@@ -13,6 +13,7 @@
     <tr>
         <th>@Html.DisplayNameFor(model => model.Title)</th>
         <th>@Html.DisplayNameFor(model => model.Price)</th>
+        <th>@Html.DisplayNameFor(model => model.Reseller)</th>
         <th />
     </tr>
     @foreach (AdvertisementViewModel advertisement in Model)
@@ -20,6 +21,7 @@
         <tr>
             <td>@advertisement.Title</td>
             <td>@advertisement.Price</td>
+            <td>@advertisement.Reseller</td>
             <td>
                 @Html.ActionLink("Details", "Details", new { id = advertisement.Id }) |
                 @Html.ActionLink("Delete", "Delete", new { id = advertisement.Id })
