--- a/Laboration 3/Advertisements/Views/Advertisements/Create.cshtml
+++ b/Laboration 3/Advertisements/Views/Advertisements/Create.cshtml
@@ -109,9 +109,9 @@
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(model => model.OrganisationNumber, new { @class = "col-sm-2 control-label" })
+        @Html.LabelFor(model => model.OrganizationNumber, new { @class = "col-sm-2 control-label" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.OrganisationNumber, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.EditorFor(model => model.OrganizationNumber, new { htmlAttributes = new { @class = "form-control" } })
         </div>
     </div>
     <div class="form-group">
