--- a/Laboration 3/Advertisements/Views/Advertisements/Create.cshtml
+++ b/Laboration 3/Advertisements/Views/Advertisements/Create.cshtml
@@ -15,30 +15,42 @@
     @Html.ValidationSummary(false)
 
     <div class="form-group">
-        <div id="subscriberradio" class="radio">
-            <label class="control-label col-sm-2" for="subscriptionnumbertext">
-                <input type="radio" name="advertisertype" checked> Subscriber
-            </label>
-            <div class="col-sm-10">
-                @Html.TextBoxFor(model => model.SubscriptionNumber, new { @class = "form-control", id = "subscriptionnumbertext", placeholder = "Subscription number" })
-                <input type="submit" id="subscriptionnumberbutton" class="btn btn-default" value="Get" />
-            </div>
-        </div>
+        @if (Model.IsSubscriberSelected)
+        {
+            @Html.RadioButtonFor(model => model.IsSubscriberSelected, true, new { id = "subscriberradio" })
+        }
+        else
+        {
+            @Html.RadioButtonFor(model => model.IsSubscriberSelected, false, new { id = "subscriberradio" })
+        }
+        Subscriber
+        @Html.TextBoxFor(model => model.SubscriptionNumber, new
+        {
+            @class = "form-control",
+            id = "subscriptionnumbertext",
+            placeholder = "Subscription number"
+        })
+        <input type="submit" id="subscriptionnumberbutton" class="btn btn-default" value="Get"/>
     </div>
 
     <div class="form-group">
-        <div id="companyradio" class="radio">
-            <label class="control-label col-sm-2" for="advertisertype">
-                <input type="radio" name="advertisertype"> Company
-            </label>
-        </div>
+        @if (Model.IsSubscriberSelected)
+        {
+            @Html.RadioButtonFor(model => model.IsSubscriberSelected, false, new { id = "companyradio" })
+        }
+        else
+        {
+            @Html.RadioButtonFor(model => model.IsSubscriberSelected, true, new { id = "companyradio" })
+        }
+        Company
     </div>
 }
 
 @using (Html.BeginForm("AddSubscriberAdvertisement", "Advertisements", FormMethod.Post, new { @class = "form-horizontal", id = "subscriberinput" }))
 {
     @Html.HiddenFor(model => model.SubscriptionNumber)
-    
+    @Html.HiddenFor(model => model.IsSubscriberSelected)
+
     <div class="form-group">
         @Html.LabelFor(model => model.FirstName, new { @class = "col-sm-2 control-label" })
         <div class="col-md-10">
@@ -102,6 +114,8 @@
 
 @using (Html.BeginForm("AddCompanyAdvertisement", "Advertisements", FormMethod.Post, new { @class = "form-horizontal", id = "companyinput" }))
 {
+    @Html.HiddenFor(model => model.IsSubscriberSelected)
+
     <div class="form-group">
         @Html.LabelFor(model => model.Name, new { @class = "col-sm-2 control-label" })
         <div class="col-md-10">
