--- a/Project/TravelDiary/Views/Home/Index.cshtml
+++ b/Project/TravelDiary/Views/Home/Index.cshtml
@@ -6,6 +6,7 @@
     <script src="~/Scripts/app/app.js"></script>
     <script src="~/Scripts/app/services/diary-entry-service.js"></script>
     <script src="~/Scripts/app/controllers/diary-entry-controller.js"></script>
+    <script src="~/Scripts/app/directives/diary-entry-text.js"></script>
 }
 
 <div ng-app="TravelDiaryApp">
@@ -16,9 +17,7 @@
 
     <div class="row">
         <div class="col-md-8" ng-controller="DiaryEntryController">
-            <h1>{{title}}</h1>
-
-            <p ng-bind-html="content"></p>
+            <diary-entry-text></diary-entry-text>
         </div>
         <div class="col-md-4">
             <h2>Get more libraries</h2>
