Moved the Angular app to the shared layout.

--- a/Project/TravelDiary/Views/Home/Index.cshtml
+++ b/Project/TravelDiary/Views/Home/Index.cshtml
@@ -1,12 +1,8 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Index";
 }
 
-@section scripts {
-    <script src="~/Scripts/app/app.js"></script>
-}
-
-<div ng-app="TravelDiaryApp">
+<div>
 
     <div class="jumbotron">
         <h1>My Travel Diary</h1>
