Implemented showing the correct destination on the map when browsing diary entries.

--- a/Project/TravelDiary/Views/Home/Index.cshtml
+++ b/Project/TravelDiary/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
 
         <!-- Map -->
         <div class="col-md-4">
-            <ng-map center="41,-87" zoom="3"></ng-map>
+            <ng-map></ng-map>
         </div>
     </div>
 </div>
