--- a/Project/TravelDiary/Content/Site.css
+++ b/Project/TravelDiary/Content/Site.css
@@ -22,3 +22,28 @@ select,
 textarea {
     max-width: 280px;
 }
+
+/* Photo grid styles */
+.grid {
+    position: absolute;
+    list-style: none;
+    background: #ffffff;
+    box-sizing: border-box;
+    -webkit-transition: all 400ms ease;
+    transition: all 400ms ease;
+    overflow: hidden;
+    border-radius: 10px;
+}
+.grid-img {
+    width: 100%;
+    vertical-align: middle;
+    -webkit-transition: opacity 0.6s ease-out;  
+    transition: opacity 0.6s ease-out;
+    background-color: #fff;
+    opacity: 0;
+    visibility: hidden;
+}
+.grid-img.img-loaded {
+    visibility: visible;
+    opacity: 1;
+}
