--- a/Project/TravelDiary/Views/Shared/_Layout.cshtml
+++ b/Project/TravelDiary/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-    <div class="container" ng-app="TravelDiaryApp">
+    <div class="container" ng-app="travelDiaryApp">
         @RenderBody()
         <hr />
         <footer>
